feat: add first chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,17 +1,17 @@
- @online{competition,
+@online{competition,
   author       = "{Northeastern SMILE Lab}",
   title        = "Recognizing Faces in the Wild",
   year         = "2019",
   url          = "https://www.kaggle.com/competitions/recognizing-faces-in-the-wild/overview",
-  urldate      = "17-07-2023"
+  urldate      = "2023-07-17"
 }
 
 @online{dataset,
-  author       = "Joseph P. Robinson, Ming Shao e Yun Fu",
+  author       = "Joseph P. Robinson and Ming Shao and Yun Fu",
   title        = "Families In the Wild (FIW) Dataset",
   year         = "2016",
   url          = "https://web.northeastern.edu/smilelab/fiw/",
-  urldate      = "17-07-2023"
+  urldate      = "2023-07-17"
 }
 
 @article{elliptic,
@@ -48,7 +48,7 @@
   title        = "Improving skin tone representation across Google",
   year         = "2022",
   url          = "https://blog.google/products/search/monk-skin-tone-scale/",
-  urldate      = "17-07-2023"
+  urldate      = "2023-07-17"
 }
 
 @article{lbp,
