feat: add dataset, handcrafted features, conclusions chapters

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -15,7 +15,7 @@
 }
 
 @article{elliptic,
-  author       = {Frank P. Kuhl e Charles R. Giardina},
+  author       = {Frank P. Kuhl and Charles R. Giardina},
   title        = {Elliptic Fourier features of a closed contour},
   journal      = {Comput. Graph. Image Process.},
   volume       = {18},
@@ -30,7 +30,7 @@
 }
 
 @article{skin,
-  author       = {Djamila Dahmani, Mehdi Cheref e Slimane Larabi},
+  author       = {Djamila Dahmani and Mehdi Cheref and Slimane Larabi},
   title        = {Zero-sum game theory model for segmenting skin regions},
   journal      = {Image Vis. Comput.},
   volume       = {99},
@@ -52,7 +52,7 @@
 }
 
 @article{lbp,
-  author       = {Timo Ojala, Matti Pietik{\"{a}}inen e Topi M{\"{a}}enp{\"{a}}{\"{a}}},
+  author       = {Timo Ojala and Matti Pietik{\"{a}}inen and Topi M{\"{a}}enp{\"{a}}{\"{a}}},
   title        = {Multiresolution Gray-Scale and Rotation Invariant Texture Classification with Local Binary Patterns},
   journal      = {{IEEE} Trans. Pattern Anal. Mach. Intell.},
   volume       = {24},
@@ -67,7 +67,7 @@
 }
 
 @article{eye,
-  author       = {Alan L. Yuille, Peter W. Hallinan e David S. Cohen},
+  author       = {Alan L. Yuille and Peter W. Hallinan and David S. Cohen},
   title        = {Feature extraction from faces using deformable templates},
   journal      = {Int. J. Comput. Vis.},
   volume       = {8},
@@ -82,7 +82,7 @@
 }
 
 @inproceedings{siamese,
-  author       = {Jun Yu, Mengyan Li, Xinlong Hao e Guochen Xie},
+  author       = {Jun Yu and Mengyan Li and Xinlong Hao and Guochen Xie},
   title        = {Deep Fusion Siamese Network for Automatic Kinship Verification},
   booktitle    = {15ma Conferenza Internazionale {IEEE} su "Automatic Face and Gesture Recognition", 
                   {FG} 2020, Buenos Aires, Argentina, 16-20 Novembre 2020},
@@ -97,7 +97,7 @@
 }
 
 @inproceedings{vggface2,
-  author       = {Qiong Cao, Li Shen, Weidi Xie, Omkar M. Parkhi e Andrew Zisserman},
+  author       = {Qiong Cao and Li Shen and Weidi Xie and Omkar M. Parkhi and Andrew Zisserman},
   title        = {VGGFace2: {A} Dataset for Recognising Faces across Pose and Age},
   booktitle    = {13ma Conferenza Internazionale {IEEE} su "Automatic Face and Gesture Recognition, 
                   {FG} 2018, Xi'an, China, 15-19 Maggio 2018},
